--- a/generic-index/pom.xml
+++ b/generic-index/pom.xml
@@ -13,13 +13,29 @@
 
     <groupId>org.honeybee</groupId>
     <artifactId>generic-index</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.honeybee</groupId>
+            <artifactId>generic-base</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.honeybee</groupId>
+            <artifactId>component-mybatisplus</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.honeybee</groupId>
+            <artifactId>component-flyway</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
