--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
     <modules>
         <module>generic-base</module>
         <module>generic-index</module>
+        <module>component-mybatisplus</module>
+        <module>component-flyway</module>
     </modules>
 
     <properties>
@@ -26,12 +28,13 @@
         <web.version>2.2.0.RELEASE</web.version>
         <lombok.version>1.18.10</lombok.version>
         <mybatis.plus.version>3.2.0</mybatis.plus.version>
-        <mybatis.plus.generator.version>3.2.0</mybatis.plus.generator.version>
+        <mybatis.plus.generator.version>3.3.2</mybatis.plus.generator.version>
         <freemarker.version>2.3.28</freemarker.version>
         <mysql.connector.version>8.0.16</mysql.connector.version>
         <druid.version>1.1.18</druid.version>
         <flyway.core.version>5.2.4</flyway.core.version>
         <hutool.version>5.1.1</hutool.version>
+        <commons-lang3.version>3.10</commons-lang3.version>
     </properties>
 
     <dependencyManagement>
@@ -97,6 +100,13 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
+            </dependency>
+
+            <!-- commons-lang3 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
