--- a/generic-index/src/main/resources/application.yml
+++ b/generic-index/src/main/resources/application.yml
@@ -12,7 +12,7 @@ mybatis-plus:
       db-type: mysql
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
-  mapper-locations: classpath:/mapper/*.xml
+  mapper-locations: classpath:/mapper/*/*.xml
 
 ##flyway配置
 flyway:
