--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <hutool.version>5.1.1</hutool.version>
         <commons-lang3.version>3.10</commons-lang3.version>
         <aop.version>2.2.0.RELEASE</aop.version>
+        <knife4j.version>2.0.4</knife4j.version>
     </properties>
 
     <dependencyManagement>
@@ -115,6 +116,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-aop</artifactId>
                 <version>${aop.version}</version>
+            </dependency>
+
+            <!-- knife4j -->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
