--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>generic-index</module>
         <module>component-mybatisplus</module>
         <module>component-flyway</module>
+        <module>component-file</module>
     </modules>
 
     <properties>
@@ -37,6 +38,7 @@
         <commons-lang3.version>3.10</commons-lang3.version>
         <aop.version>2.2.0.RELEASE</aop.version>
         <knife4j.version>2.0.4</knife4j.version>
+        <easyExcel.version>2.2.6</easyExcel.version>
     </properties>
 
     <dependencyManagement>
@@ -124,6 +126,15 @@
                 <artifactId>knife4j-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
             </dependency>
+
+            <!-- easyExcel -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyExcel.version}</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
