修改说明：删除Security Config,增加OptionalBean工具类

--- a/generic-index/pom.xml
+++ b/generic-index/pom.xml
@@ -28,7 +28,7 @@
 
         <dependency>
             <groupId>org.honeybee</groupId>
-            <artifactId>component-mybatisplus</artifactId>
+            <artifactId>component-rbac</artifactId>
             <version>${project.version}</version>
         </dependency>
 
