修改说明：更新Security

--- a/component-rbac/pom.xml
+++ b/component-rbac/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!--spring security jwt-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+        </dependency>
+
         <!--jwt-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
