--- a/generic-index/src/main/resources/application.yml
+++ b/generic-index/src/main/resources/application.yml
@@ -2,9 +2,8 @@ spring:
   profiles:
     active: dev   #配置文件版本
   security:
-    user:
-      name: honeybee
-      password: 123456
+    basic:
+      enable: true  #是否开启spring security基本的鉴权
 
 ##mybatis-plus配置
 mybatis-plus:
@@ -26,6 +25,6 @@ flyway:
 
 ##jwt配置
 jwt:
-  secret: secret
-  expiration: 7200000
-  token: Authorization
+  header: jwt-token
+  secret: mySecret
+  expiration: 86400 #token有效期一天(秒)
