--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <knife4j.version>2.0.4</knife4j.version>
         <easyExcel.version>2.2.6</easyExcel.version>
         <security.version>2.3.1.RELEASE</security.version>
+        <security.jwt.version>1.1.1.RELEASE</security.jwt.version>
         <jjit.version>0.9.1</jjit.version>
     </properties>
 
@@ -141,6 +142,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-security</artifactId>
                 <version>${security.version}</version>
+            </dependency>
+
+            <!-- spring security jwt -->
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-jwt</artifactId>
+                <version>${security.jwt.version}</version>
             </dependency>
 
             <!--jwt-->
