--- a/generic-base/pom.xml
+++ b/generic-base/pom.xml
@@ -49,6 +49,11 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <artifactId>fastjson</artifactId>
+            <groupId>com.alibaba</groupId>
+        </dependency>
     </dependencies>
 
     <build>
