--- a/generic-index/src/main/resources/application.yml
+++ b/generic-index/src/main/resources/application.yml
@@ -24,7 +24,8 @@ flyway:
 #  location: classpath:db/migration
 
 ##jwt配置
-jwt:
-  header: jwt-token
-  secret: mySecret
-  expiration: 86400 #token有效期一天(秒)
+auth:
+  jwt:
+    header: jwt-token
+    secret: mySecret
+    expiration: 86400 #token有效期一天(秒)
