--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>component-mybatisplus</module>
         <module>component-flyway</module>
         <module>component-file</module>
+        <module>component-rbac</module>
     </modules>
 
     <properties>
