修改说明: security配置更新

--- a/generic-index/src/main/resources/application.yml
+++ b/generic-index/src/main/resources/application.yml
@@ -29,3 +29,43 @@ auth:
     header: jwt-token
     secret: mySecret
     expiration: 86400 #token有效期一天(秒)
+    # 不需要鉴权的路径
+  ignores:
+    - "/"
+    - "/notice/**"
+    - "/excel/**"
+    - "/file/**"
+    - "/pdf/**"
+    - "/user-es/**"
+    - "/quartz/**"
+    - "/test/**"
+    - "/cloud/**"
+    - "/rocket-mq/**"
+    - "/activeMq/**"
+    - "/kaptcha/**"
+    - "/activiti/**"
+    - "/openOffice/**"
+    - "/auth/register"
+    - "/auth/login"
+    - "/auth/logout"
+    - "/api/**"
+    - "/resources/**"
+    - "/templates/**"
+    - "/websocket.html"
+    - "/error.html"
+    - "/kaptcha.html"
+    - "/imgs/**"
+    - "*.css"
+    - "*.js"
+    - "*.gif"
+    - "*.jpg"
+    - "*.png"
+    - "*.ico"
+    - "/favicon.ico"
+    - "/druid/**"
+    - "/public/**"
+    - "/swagger-ui.html"
+    - "/swagger-resources/**"
+    - "/v2/**"
+    - "/webjars/**"
+    - "/doc.html"
