--- a/generic-base/pom.xml
+++ b/generic-base/pom.xml
@@ -50,6 +50,7 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- fastjson -->
         <dependency>
             <artifactId>fastjson</artifactId>
             <groupId>com.alibaba</groupId>
