--- a/generic-index/src/main/resources/application-dev.yml
+++ b/generic-index/src/main/resources/application-dev.yml
@@ -3,6 +3,7 @@ server:
 
 ##数据源配置
 spring:
+  #mysql数据库配置
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -24,4 +25,26 @@ spring:
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
+  #Redis数据库配置
+  redis:
+    #Redis数据库索引,默认为0
+    database: 0
+    #Redis服务地址
+    host: 139.196.137.238
+    #Redis服务连接端口
+    port: 6379
+    #Redis服务密码
+    password: nytd13002124
+    #连接超时时间 单位ms(毫秒)
+    timeout: 3000
+    lettuce:
+      pool:
+        #连接池最大连接数
+        max-active: 8
+        #连接池最大阻塞等待时间,负值表示没有限制
+        max-wait: -1
+        #连接池最大空闲连接
+        max-idle: 8
+        #连接池最小空闲连接
+        min-idle: 0
 
