--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>component-flyway</module>
         <module>component-file</module>
         <module>component-rbac</module>
+        <module>component-cache</module>
     </modules>
 
     <properties>
@@ -44,6 +45,7 @@
         <security.jwt.version>1.1.1.RELEASE</security.jwt.version>
         <jjit.version>0.9.1</jjit.version>
         <fastjson.version>1.2.73</fastjson.version>
+        <commons-pool2.version>2.9.0</commons-pool2.version>
     </properties>
 
     <dependencyManagement>
@@ -172,6 +174,20 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${web.version}</version>
+            </dependency>
+
+            <!-- redis -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${web.version}</version>
+            </dependency>
+
+            <!--commons-pool2 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${commons-pool2.version}</version>
             </dependency>
 
         </dependencies>
