--- a/generic-index/src/main/resources/application-dev.yml
+++ b/generic-index/src/main/resources/application-dev.yml
@@ -48,3 +48,10 @@ spring:
         #连接池最小空闲连接
         min-idle: 0
 
+##自定义
+custom:
+  feign:
+    client:
+      test:
+        url: localhost:8090
+
