--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>component-rbac</module>
         <module>component-cache</module>
         <module>component-remotecall</module>
+        <module>componenet-quartz</module>
     </modules>
 
     <properties>
@@ -201,6 +202,13 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+                <version>${web.version}</version>
+            </dependency>
+
+            <!--quartz-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-quartz</artifactId>
                 <version>${web.version}</version>
             </dependency>
 
