--- a/component-remotecall/pom.xml
+++ b/component-remotecall/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <name>remotecall</name>
-    <description>Demo project for Spring Boot</description>
+    <description>远程调用模块</description>
     <packaging>jar</packaging>
 
     <groupId>org.honeybee</groupId>
