--- a/componenet-quartz/pom.xml
+++ b/componenet-quartz/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <name>quartz</name>
-    <description>Demo project for Spring Boot</description>
+    <description>定时任务模块</description>
     <packaging>jar</packaging>
 
     <groupId>org.honeybee</groupId>
