修改说明:更新kafka示例

--- a/component-kafka/pom.xml
+++ b/component-kafka/pom.xml
@@ -16,6 +16,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.honeybee</groupId>
+            <artifactId>generic-base</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- spring kafka support -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
