--- a/component-rbac/pom.xml
+++ b/component-rbac/pom.xml
@@ -39,6 +39,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.honeybee</groupId>
+            <artifactId>component-kafka</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!--spring security-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
