修改说明: 优化kafka示例注解和注释

--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,7 @@
                 <version>${shardingsphere.version}</version>
             </dependency>
 
+            <!-- 整合kafka-clients和sprng-kafka要考虑版本兼容性 -->
             <!-- spring kafka support -->
             <dependency>
                 <groupId>org.springframework.kafka</groupId>
