修改说明: 更新自定义静态文件接口配置; 增加ES远程扩展字典

--- a/component-rbac/pom.xml
+++ b/component-rbac/pom.xml
@@ -45,6 +45,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.honeybee</groupId>
+            <artifactId>component-es</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!--spring security-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
