--- a/component-rbac/pom.xml
+++ b/component-rbac/pom.xml
@@ -45,11 +45,11 @@
             <version>${project.version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.honeybee</groupId>
             <artifactId>component-es</artifactId>
             <version>${project.version}</version>
-        </dependency>
+        </dependency>-->
 
         <!--spring security-->
         <dependency>
